Update about heading margin bottom and footer socil icon alignment fix || 2026-01-20 10:35 PM

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -79,7 +79,7 @@
     /* footer */
     .menu-f ul{
         flex-wrap: wrap;
-        max-width: 255px;
+        max-width: 355px;
         margin: auto;
     }
     .f-content h2{
